--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: '3.12'
 
       - name: Install dependencies
         run: |
@@ -29,15 +29,19 @@ jobs:
         run: |
           choco install innosetup -y  # Ensure Inno Setup is installed
 
+      - name: Build EXE with PyInstaller
+        run: |
+          pyinstaller --onefile --name artemis artemis/main.py  # Create the .exe file
+
       - name: Build Setup EXE using Inno Setup
         run: |
-          # Ensure Inno Setup is on the PATH and run inno-compiler
-          $inno_path = "C:\Program Files (x86)\Inno Setup 6\ISCC.exe"  # Default path to ISCC compiler
+          # Ensure Inno Setup is on the PATH and run ISCC compiler
+          $inno_path = "C:\Program Files (x86)\Inno Setup 6\ISCC.exe"  # Path to ISCC compiler
           & $inno_path "artemis_installer.iss"  # Path to your .iss file in the repo root
 
       - name: Create GitHub release
         uses: softprops/action-gh-release@v1
         with:
-          files: "output/artemis_installer.exe"  # Adjust the path to your output installer
+          files: "output/artemis_installer.exe"  # Path to the generated installer
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}  # Use your custom token for release access
