--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,10 +2,8 @@ name: Release Setup EXE
 
 on:
   push:
-    branches:
-      - master
-      - main
-    if: contains(github.event.head_commit.message, 'done')
+    tags:
+      - 'v*'
 
 jobs:
   release:
